# rasprover-rs

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  build.rs  laze-project.yml  partitions.csv  pixi.toml
.cargo/: config.toml
.claude/: settings.local.json
.github/: dependabot.yml
.github/workflows/: ci.yml  claude-code-review.yml
data/: RaspRover PT PI4B AI Kit.f3z  RaspRover PT PI4B AI Kit.step  RaspRover_PT_PI4B_AI_Kit.dxf
firmware/: .clippy.toml  .env.example  .nvim.lua  Cargo.toml  esp-activate.sh
firmware/.cargo/: config.toml
firmware/src/: board.rs  imu.rs  lib.rs  network.rs  ros2.rs
firmware/tests/: imu_test.rs
robot/: .gitignore  README.md  pixi.toml  rasprover_dependencies.repos
robot/src/rasprover_bringup/: CMakeLists.txt  package.xml
robot/src/rasprover_bringup/launch/: bringup.launch.py
robot/src/rasprover_description/: CMakeLists.txt  package.xml
robot/src/rasprover_description/config/: initial_positions.yaml
robot/src/rasprover_description/launch/: rsp.launch.py  view.launch.py
robot/src/rasprover_description/meshes/: wheel_link.stl
robot/src/rasprover_description/test/: test_xacro_processing.py
robot/src/rasprover_description/urdf/: 3d_camera.xacro  lidar.xacro  pt.xacro  rasprover.gazebo  rasprover.urdf.xacro  rover_wheel.xacro
robot/src/rasprover_gz/: CMakeLists.txt  package.xml
robot/src/rasprover_gz/config/: gz_bridge.yaml
robot/src/rasprover_gz/launch/: gz_bringup.launch.py
robot/src/rasprover_gz/worlds/: empty.sdf
src/: display.rs  i2c_bus.rs  imu.rs  lib.rs  main.rs  motors.rs  network.rs  ota.rs  pins.rs  utils.rs
tests/: display_test.rs  imu_test.rs  network_state_test.rs
